--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".DebtAddActivity"
+            android:parentActivityName=".DebtListActivity"></activity>
+
     </application>
 
 </manifest>
