--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="AA_DB_NAME"
             android:value="debts.db" />
@@ -30,11 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".DebtAddActivity"
-            android:parentActivityName=".DebtListActivity"></activity>
-
+            android:parentActivityName=".DebtListActivity" />
+        <activity android:name=".DebtAddPagerActivity"></activity>
     </application>
 
 </manifest>
