--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <provider
+            android:name="com.activeandroid.content.ContentProvider"
+            android:authorities="by.verus.debts"
+            android:enabled="true"
+            android:exported="false">
+        </provider>
+
         <meta-data
             android:name="AA_DB_NAME"
             android:value="debts.db" />
