--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.basgeekball:awesome-validation:2.0'
     compile 'android.arch.persistence.room:runtime:1.0.0'
+    compile 'android.arch.lifecycle:extensions:1.0.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0'
     testCompile 'junit:junit:4.12'
 }
