--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="by.verus.debts">
 
     <application
-        android:name=".DebtApplication"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/money_bag"
         android:label="@string/app_name"
