--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.DebtListActivity"
+            android:name=".ui.TabActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -24,12 +24,12 @@
         <activity
             android:name=".ui.DebtAddActivity"
             android:label="@string/activity_debt_add_title"
-            android:parentActivityName=".ui.DebtListActivity"/>
+            android:parentActivityName=".ui.TabActivity"/>
 
         <activity
             android:name=".ui.DebtAddPagerActivity"
             android:label="@string/activity_debt_add_pager_title"
-            android:parentActivityName=".ui.DebtListActivity"/>
+            android:parentActivityName=".ui.TabActivity"/>
 
     </application>
 
