UI code reorganized

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.TabActivity"
+            android:name=".ui.tabs.TabActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,14 +22,14 @@
         </activity>
 
         <activity
-            android:name=".ui.DebtAddActivity"
+            android:name=".ui.debtAddEdit.DebtAddActivity"
             android:label="@string/activity_debt_add_title"
-            android:parentActivityName=".ui.TabActivity"/>
+            android:parentActivityName=".ui.tabs.TabActivity" />
 
         <activity
-            android:name=".ui.DebtAddPagerActivity"
+            android:name=".ui.DebtEditPagerActivity"
             android:label="@string/activity_debt_add_pager_title"
-            android:parentActivityName=".ui.TabActivity"/>
+            android:parentActivityName=".ui.tabs.TabActivity" />
 
     </application>
 
